0.9.9 (in progress)

* new commands: db.addDataSegment(), db.dropDataSegment()                          
* new commands: server.configList(), server.configGet(), server.configSet()                          
* db.query() is now an alias of db.command()
* added support to query parameters (ex: "SELECT FROM OUser where name = :name")

0.9.8 (2013/02/22)

* added support to SELECT from indexes
* improved support to orientdb 1.3.0
* added support to transactions
* improved "long" type handling
* improved RID parsing
* errors given to callbacks are now instances of Error
* new command: Server.listDatabases
* various minor improvements and bug fixes and contributions