@@ -8,16 +8,16 @@ var util = require("util"),
     command = function() {
         base.call(this);
 
-        this.steps.push(readSuccessfulByte);
+        this.steps.push(readIsUsedByte);
     };
 
 util.inherits(command, base);
 
 module.exports = command;
 
-command.operation = OperationTypes.DATASEGMENT_DROP;
+command.operation = OperationTypes.DATACLUSTER_LH_CLUSTER_IS_USED;
 
-function readSuccessfulByte(buf, offset) {
+function readIsUsedByte(buf, offset) {
     if (!parser.canReadBoolean(buf, offset)) {
         return 0;
     }
@@ -36,8 +36,5 @@ command.write = function(socket, sessionId, segmentName, callback) {
 
     // session ID
     socket.write(parser.writeInt(sessionId));
-
-    // segment name
-    socket.write(parser.writeString(segmentName));
 
 };
