@@ -399,6 +399,18 @@ Db.prototype.dropDataSegment = function(segmentName, callback) {
 };
 
 
+Db.prototype.isLHClustersUsed = function(callback) {
+    callback = callback || EMPTY_FUNCTION;
+
+    // older versions do not support this command
+    if (this.server.manager.serverProtocolVersion < 13) {
+        return callback(new Error("isLHClustersUsed available since OrientDB 1.3.0"));
+    }
+
+    this.server.send(OperationTypes.DATACLUSTER_LH_CLUSTER_IS_USED, null, callback);
+};
+
+
 Db.prototype.countDataClusters = function(clustersId, callback) {
     callback = callback || EMPTY_FUNCTION;
 
